posts lists,search & pagination in home page

--- a/blog/client/assets/css/main.css
+++ b/blog/client/assets/css/main.css
@@ -12,3 +12,28 @@ p {
 h6 {
   font-weight: bold;
 }
+.post {
+  max-height: 200px;
+}
+
+.post-body {
+  width: 200px;
+  height: 150px;
+  white-space: wrap;
+  text-overflow: ellipsis;
+}
+
+.post-img {
+  max-height: 140px;
+  height: 140px;
+  width: 180px;
+  min-width: 180px;
+}
+
+.semibolder {
+  font-weight: 600;
+}
+
+.card {
+  min-height: 200px;
+}
